<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.18</version>
	</parent>
	<groupId>com.insurance</groupId>
	<artifactId>insurance</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>insurance</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<start-class>com.insurance.InsuranceApplication</start-class>
		<spring.version>2.7.18</spring.version>
		<mysql-connector.version>8.3.0</mysql-connector.version>
		<cxf.version>4.0.3</cxf.version>
		<google-collections.version>1.0</google-collections.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<junit.version>4.13.2</junit.version>
		<mockito-core.version>5.9.0</mockito-core.version>
		<jaxb2.version>2.5.0</jaxb2.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<h2.version>2.2.224</h2.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jersey</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-activemq</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<version>${spring.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql-connector.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
			<version>${cxf.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.collections</groupId>
			<artifactId>google-collections</artifactId>
			<version>${google-collections.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

<!--		test scope-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito-core.version}</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

	<build>
<!-- 	<finalName>insurance</finalName> -->
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
<!--				<version>${maven-compiler-plugin.version}</version>-->
				<configuration>
					<source>9</source>
					<target>9</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<compilerArg>
							-Amapstruct.defaultComponentModel=spring
<!--							-Amapstruct.unmappedTargetPolicy=IGNORE-->
						</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>${jaxb2.version}</version>
				<executions>
					<execution>
						<id>schemagen</id>
						<goals>
							<goal>schemagen</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sources>
						<source>src/main/java/com/insurance/model</source>
					</sources>
					<outputDirectory>src/main/resources/xsd</outputDirectory>
					<clearOutputDir>true</clearOutputDir>
					<transformSchemas>
						<transformSchema>
							<uri>/insurance/model/user</uri>
							<toPrefix>user</toPrefix>
							<toFile>User.xsd</toFile>
						</transformSchema>
						<transformSchema>
							<uri>/insurance/model/client</uri>
							<toPrefix>client</toPrefix>
							<toFile>Client.xsd</toFile>
						</transformSchema>
						<transformSchema>
							<uri>/insurance/model/employee</uri>
							<toPrefix>employee</toPrefix>
							<toFile>Employee.xsd</toFile>
						</transformSchema>
						<transformSchema>
							<uri>/insurance/model/insurance</uri>
							<toPrefix>insurance</toPrefix>
							<toFile>Insurance.xsd</toFile>
						</transformSchema>
						<transformSchema>
							<uri>/insurance/model/reinsurance</uri>
							<toPrefix>reinsurance</toPrefix>
							<toFile>Reinsurance.xsd</toFile>
						</transformSchema>
						<transformSchema>
							<uri>/insurance/model/tariff</uri>
							<toPrefix>tariff</toPrefix>
							<toFile>Tariff.xsd</toFile>
						</transformSchema>
					</transformSchemas>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
